--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kaz-ogiwara.github.io/",
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
